Closed Bug 983273 Opened 10 years ago Closed 10 years ago

HwcComposer2D should honor HWC_HINT_CLEAR_FB for bottom layer.

Categories

(Core :: Graphics: Layers, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30
blocking-b2g 1.4+
Tracking Status
firefox28 --- wontfix
firefox29 --- wontfix
firefox30 --- fixed
b2g-v1.4 --- fixed

People

(Reporter: sushilchauhan, Assigned: sushilchauhan)

Details

Attachments

(1 file, 1 obsolete file)

During partial HWC composition, HWC wrapper should honor HWC_HINT_CLEAR_FB for OVERLAY layer at lowest z-order as well because in Gecko we do not clear Frame Buffer with transparent pixels at start of composition.

I have attached the patch for review.
Attachment #8390665 - Flags: review?(ncameron)
Assignee: nobody → sushilchauhan
Status: NEW → ASSIGNED
Attachment #8390665 - Flags: review?(ncameron) → review?(dwilson)
Attachment #8390665 - Flags: review?(dwilson) → review+
Uploading HG friendly version of reviewed patch.
Attachment #8390665 - Attachment is obsolete: true
Attachment #8390805 - Flags: review+
Keywords: checkin-needed
blocking-b2g: --- → 1.4?
blocking-b2g: 1.4? → 1.4+
https://hg.mozilla.org/mozilla-central/rev/369e8353f89c
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Not enough information with current STR to write test case to address bug.
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(ktucker)
Flags: in-moztrap?(rmitchell)
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
Flags: needinfo?(ktucker)
Flags: in-moztrap?(rmitchell)
Flags: in-moztrap-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: