Bug 983273 - HwcComposer2D should honor HWC_HINT_CLEAR_FB for bottom layer. r=dwilson